--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -487,7 +487,8 @@ h4 .lighter
 .yui-skin-lecmTheme .yui-panel div.form-field select,
 .yui-skin-lecmTheme .yui-panel div.form-field textarea,
 .yui-skin-lecmTheme .yui-panel div.form-field ul,
-.yui-skin-lecmTheme .yui-panel div.form-field > div:not(.viewmode-field):not(.datepicker) {
+.yui-skin-lecmTheme .yui-panel div.form-field > div:not(.viewmode-field):not(.datepicker),
+.yui-skin-lecmTheme .yui-panel div.form-field div.viewmode-field span.viewmode-value {
     width: 460px;
     max-width: 100%;
     float: right;
