--- a/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
+++ b/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
@@ -6,6 +6,16 @@
     height: 500px;
     z-index: 50000;
     background-color: #e9e9e9;
+    border: 1px solid #797979;
+}
+
+#ijab.disconnected{
+    width: 240px;
+    height: 33px;
+}
+
+#ijab.nomessages{
+    width: 240px;
 }
 
 .ijab-mainwidget{
@@ -59,6 +69,23 @@
 
 .ijab-panels-tab-wrap .ijab-window .ijab-window-tab-wrap  {
     display: none;
+}
+
+.ijab-window-header.ui-widget-header h4 {
+    font-size : 1.6em;
+    font-weight: normal;
+}
+
+.mainBarHeader{
+    height: 33px;
+}
+
+.mainBarHeader span{
+    font-size: 2em;
+}
+
+.gwt-Image{
+    border: 1px solid #999999 !important;
 }
 
 /*!* ijab UI v2.0.0pre * http://www.ijab.im/ * * Copyright(c) 2009 Hidden * * Date:* Revision:*/
@@ -1043,20 +1070,27 @@ margin: .3em .5em .3em;
 {
     overflow-x:hidden;
     overflow-y:auto;
-    max-height: 325px;
+    max-height: 395px;
 }
 
 .ijab-contactview-grouphead
 {
-    color:#FFFFFF;
+    color:#3498B8;
     display:block;
     font-size:12px;
     height:15px;
     line-height:15px;
     text-decoration:none !important;
     cursor:pointer;
-    background:#FFFFFF url(images/groupheader.png) repeat-x scroll 0 0;
+    background: #BCE6F4;  /*#FFFFFF url(images/groupheader.png) repeat-x scroll 0 0;*/
     overflow:hidden;
+    border-bottom: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: #5CBEE0;
+
+    border-top: 1px;
+    border-top-style: solid;
+    border-top-color: #f2f2f2;
 }
 
 .ijab-contactview-grouphead em
@@ -1153,6 +1187,7 @@ margin: .3em .5em .3em;
     overflow:hidden;
     padding:1px;
     width:24px;
+    border: 1px solid #999999 !important;
 }
 
 .ijab-offline
@@ -2087,7 +2122,7 @@ html>body .gwt-DecoratedTabBar {
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Lucida Grande, Lucida Sans, Arial, sans-serif; font-size: 1em; width:auto;}
 .ui-widget-content { border: 1px solid #a6c9e2; background: #fcfdfd url(images/ui-bg_inset-hard_100_fcfdfd_1x100.png) 50% bottom repeat-x; color: #222222; }
 .ui-widget-content a { color: #222222; }
-.ui-widget-header { border: 1px solid #4297d7; background: #5c9ccc url(images/ui-bg_gloss-wave_55_5c9ccc_500x100.png) 50% 50% repeat-x; color: #ffffff; font-weight: bold; }
+.ui-widget-header { background: #00B0EB; color: #ffffff; font-weight: bold; }
 .ui-widget-header a { color: #ffffff; }
 
 /* Interaction states
