--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -473,7 +473,8 @@ h4 .lighter
     margin-bottom: 10px;
     float: left;
 }
-.yui-skin-lecmTheme .yui-panel div.form-field label {
+.yui-skin-lecmTheme .yui-panel div.form-field label,
+.yui-skin-lecmTheme .yui-panel div.form-field div.viewmode-field span.viewmode-label {
     max-width: 110px;
     float: left;
     clear: none;
