--- a/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
+++ b/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
@@ -1,12 +1,26 @@
 #ijab {
     position: fixed;
-    bottom: 0;
-    left: 0;
+    top: 70px;
+    left: 450px;
     width: 600px;
     height: 500px;
     z-index: 50000;
     background-color: #e9e9e9;
     border: 1px solid #797979;
+}
+
+#myElem{
+    position: absolute;
+    top: -1px;
+    color: #00B0EB;
+    font-weight: bold;
+    font-family: arial, helvetica, clean, sans-serif;
+    font-size: 1em;
+    padding-left: 54px;
+}
+
+#ijab textarea{
+    resize: none;
 }
 
 #ijab.disconnected{
@@ -82,6 +96,7 @@
 
 .mainBarHeader span{
     font-size: 2em;
+    padding: 0 15px;
 }
 
 .gwt-Image{
