баг при масштабировании: fix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1327 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -465,6 +465,17 @@ h4 .lighter
 .yui-skin-lecmTheme .yui-panel div.form-fields div.datepicker div {
     text-align: center;
 }
+/* historic-properties-viewer */
+.yui-skin-lecmTheme div.yui-panel.historic-properties-viewer .form-container .form-fields {
+    margin-left: -1px;
+}
+.yui-skin-lecmTheme div.yui-panel.historic-properties-viewer .yui-navset .form-container {
+    padding: 0;
+}
+.yui-skin-lecmTheme div.yui-panel.historic-properties-viewer .yui-navset .form-container .form-fields {
+    margin-left: 0;
+    padding: 0;
+}
 .yui-skin-lecmTheme .yui-panel div.form-field {
     width: 100%;
     line-height: 25px;
