messenger counter style
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1341 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -145,7 +145,7 @@ a:hover {
 }
 /* Utils: end */
 
-#notificationsCounter {
+.headerCounter {
     width: 22px;
     height : 22px;
     line-height: 22px;
