[~]правильная отрисовка ссылок в архивных записях в гриде [~]подправлен поиск по архивным записям в Оргструктуре
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1352 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2012,7 +2012,7 @@ span.person a {
 	text-align: center;
 }
 
-.archive-record, .archive-record span a, .archive-record a {
+.grid .archive-record, .grid .archive-record span a, .grid .archive-record a {
     color:red;
 }
 
