1) В "Мой профиль" добавлена кнопка и страница "Меня нет в офисе". 2) Пункт "Меня нет в офисе" в выпадающем верхнем меню теперь ведет себя так: если есть возможность создать всплывающее окно-форму (подгружены все необходимые скрипты), то создаем его. В противном случае (находимся на дашборде, служебных страницах и пр.) - переход на страницу "Мой профиль > Меня нет в офисе".
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1359 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-user-profile/share/src/main/webapp/css/lecm-user-profile/user-profile-menu.css
+++ b/lecm-user-profile/share/src/main/webapp/css/lecm-user-profile/user-profile-menu.css
@@ -6,4 +6,6 @@
 #lecm-menu #menu-buttons #menu-buttons-userProfileDelegationBtn span.first-child {
     background: url('/share/res/images/lecm-delegation/delegation_32.png') no-repeat 4px 4px;
 }
-
+#lecm-menu #menu-buttons #menu-buttons-userProfileInstantAbsenceBtn span.first-child {
+    background: url('/share/res/images/lecm-user-profile/lecm-user-profile_absence-3.png') no-repeat 4px 4px;
+}
