--- a/lecm-calendar/share/src/main/webapp/css/lecm-calendar/absence-summary-table.css
+++ b/lecm-calendar/share/src/main/webapp/css/lecm-calendar/absence-summary-table.css
@@ -1,5 +1,5 @@
 div#summary-table-container > table {
-	border: 3px solid #636363;
+	border: none;
 	border-spacing: 0px 0px;
 	border-collapse: collapse ;
 }
@@ -24,12 +24,43 @@ div#summary-table-container > table tr td {
 	text-align: center;
 }
 
+.row-id {
+	text-align: center;
+	border: 1px solid #000000 !important;
+	padding: 5px;
+	width: 30px !important;
+}
+
 .calendar-header {
 	border: 1px solid #000000 !important;
 }
-.employee-column {
+
+.employee-name {
 	border: 1px solid #000000 !important;
 	padding: 5px;
+	width: 200px;
+}
+
+.summary-table-header {
+	width: 900px;
+	border: 1px solid #000000;
+	border-spacing: 0;
+}
+
+.summary-table-body {
+	width: 900px;
+	border: 1px solid #000000;
+	border-spacing: 0;
+}
+
+.summary-table {
+	width: 925px;
+}
+
+.summary-table-body-wrapper {
+	width: 925px;
+	max-height: 300px;
+	overflow: auto;
 }
 
 .reasons-legend {
@@ -37,10 +68,11 @@ div#summary-table-container > table tr td {
 	border: 1px solid #000000 !important;
 	border-collapse: separate !important;
 	margin-left: 5px;
-	width: 20%;
+	width: 300px;
 	border-spacing: 2px !important;
 }
 
 div#summary-table-container {
-	width: 1100px;
+	width: 1250px;
+	margin-top: 4px;
 }
