--- a/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
@@ -13,3 +13,11 @@
 #lecm-menu .statemachine-menu #menu-buttons-machine-deploy span.first-child {
 	background: url('../../res/images/lecm-orgstructure/alf_orgstructure_podrazdel_32.png') no-repeat 4px 4px;
 }
+
+#lecm-menu .statemachine-menu #menu-buttons-machine-export span.first-child {
+	background: url('../../res/images/lecm-orgstructure/alf_orgstructure_podrazdel_32.png') no-repeat 4px 4px;
+}
+
+#lecm-menu .statemachine-menu #menu-buttons-machine-import span.first-child {
+	background: url('../../res/images/lecm-orgstructure/alf_orgstructure_podrazdel_32.png') no-repeat 4px 4px;
+}
