Добавил валидаторы в форму создания особого графика работы: 1) проверка на обязательные поля в контроле выбора правил повторения; 2) проверка дат интервала действия графика.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1440 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/webapp/css/lecm-calendar/reiteration-control.css
+++ b/lecm-calendar/share/src/main/webapp/css/lecm-calendar/reiteration-control.css
@@ -46,3 +46,8 @@
 	background-color: #2E2EE6;
 	color: #FFFFFF;
 }
+#reiteration-rules-error-container {
+    float: left;
+    width: 100%;
+    padding-top: 7px;
+}
