--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2043,14 +2043,17 @@ div[id$=date-cntrl] - селектор для всех div с id, заканчи
     width: 460px !important;
 }
 
-/* Alfresco repository */
-#alfresco-repository #alf-filters {
+/* Alfresco repository, Alfresco console */
+#alfresco-repository #alf-filters,
+#alfresco-console #alf-filters {
     margin-left: 0;
 }
-#alfresco-repository .yui-resize-handle.yui-resize-handle-r {
+#alfresco-repository .yui-resize-handle.yui-resize-handle-r,
+#alfresco-console .yui-resize-handle.yui-resize-handle-r {
     margin-right: 0;
 }
-#alfresco-repository .alfresco-twister-open {
+#alfresco-repository .alfresco-twister-open,
+#alfresco-console .tools-link h2 {
     background-position: 3px 50%;
 }
 #alfresco-repository .toolbar,
