ALF-436: repository view improving
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1450 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2056,6 +2056,9 @@ div[id$=date-cntrl] - селектор для всех div с id, заканчи
 #alfresco-console .tools-link h2 {
     background-position: 3px 50%;
 }
+#alfresco-repository .alfresco-twister-closed {
+    background-position: 5px 50%;
+}
 #alfresco-repository .toolbar,
 #alfresco-repository .doclist .doclist-bar {
     margin: 0 0 0 -10px;
