--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
@@ -1,4 +1,5 @@
 .datagrid div.simple a.action-link,
+.datagrid div.simple a.datagrid-action-link,
 .datagrid div.simple a.simple-link,
 .datagrid div.simple a.show-more {
     cursor: pointer;
@@ -24,4 +25,33 @@
 .datagrid input.formsCheckBox,
 .datagrid input.formsCheckBox + label.checkbox {
     vertical-align: middle;
+}
+
+/*Дублирование свойств action-link в datagrid-action-link*/
+.datagrid a.datagrid-action-link
+{
+    background-position: 4px 1px;
+    background-repeat: no-repeat;
+    border: 1px solid transparent;
+    display: block;
+    min-height: 16px;
+    padding: 2px 0 2px 24px;
+}
+.datagrid .more-actions a.datagrid-action-link
+{
+    border: 1px solid #fff;
+}
+.datagrid div.simple a.datagrid-action-link
+{
+    background-position: 4px 0;
+    min-height: 16px;
+    padding: 0 0 0 24px;
+}
+.datagrid div.simple a.datagrid-action-link span
+{
+    display: none;
+}
+.datagrid div.simple div.more-actions a.datagrid-action-link span
+{
+    display: block;
 }
