Дашлет "Основные сведения". Добавлена кнопка просмотра, кнопка редактирования данных.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1468 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -25,3 +25,7 @@
 .first .yui-gd div.column2 {
     width: 49%;
 }
+
+.dashlet .titleBarActions .view {
+    background-image: url("/share/res/images/lecm-documents/view-discussion-16.png");
+}
