ALF-455 Структура карточки - Общее описание интерфейса
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1470 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -29,3 +29,8 @@
 .dashlet .titleBarActions .view {
     background-image: url("/share/res/images/lecm-documents/view-discussion-16.png");
 }
+
+.dashlet .titleBarActions .collapse
+{
+    background-image: url(../components/images/info-16.png);
+}
