Дашлет "Основные сведения". Добавлена кнопка просмотра в правой области.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1473 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -34,3 +34,6 @@
 {
     background-image: url(../components/images/info-16.png);
 }
+.document-metadata-header h2 .view {
+    background-image: url("/share/res/images/lecm-documents/view-discussion-16.png");
+}
