[~]ALF-455 Структура карточки - Общее описание интерфейса [+]Заготовки по ALF-459 Участники (дашлет), ALF-473 Участники документа (правая область)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1478 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -34,6 +34,10 @@
     background-image: url("/share/res/images/lecm-documents/collapse-16.png");
 }
 
+.dashlet .titleBarActions .expand {
+    background-image: url("/share/res/images/lecm-documents/expand-16.png");
+}
+
 .alfresco-twister-actions a {
     background-position: 0 center;
     background-repeat: no-repeat;
