[+] ALF-524. Настройка правил редактирования атрибутов на статусах
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1482 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
@@ -21,3 +21,7 @@
 #lecm-menu .statemachine-menu #menu-buttons-machine-import span.first-child {
 	background: url('../../res/images/lecm-orgstructure/alf_orgstructure_podrazdel_32.png') no-repeat 4px 4px;
 }
+
+#lecm-menu .statemachine-menu #menu-buttons-machine-status-fields span.first-child {
+    background: url('../../res/images/lecm-orgstructure/alf_orgstructure_podrazdel_32.png') no-repeat 4px 4px;
+}
